# radio-gaga

./: .gitignore  README.md  SETUP.md  start.sh
backend/: main.py  pyproject.toml
backend/src/: pipeline.py
backend/src/images_extractor/: display_utils.py  image_management.py  io_utils.py  lesion_utils.py  pipeline_image.py  seg_utils.py  uc_utils.py
backend/src/metadata_extractor/: __init__.py  metadata_extractor.py
backend/src/report_generator/: report_generator.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  cornerstoneInit.js  main.jsx
frontend/src/components/: DicomViewer.jsx  Header.jsx  MetadataPanel.jsx  MultiViewer.jsx  PasswordGate.jsx  PngScroller.jsx  ReportPanel.jsx  SeriesPanel.jsx
frontend/src/styles/: App.css  DicomViewer.css  Header.css  MetadataPanel.css  MultiViewer.css  PngScroller.css  ReportPanel.css  SeriesPanel.css  index.css
