[project]
name = "radio-gaga-backend"
version = "0.1.0"
description = "Medical imaging backend for Hackathon Unboxed 2026"
requires-python = ">=3.10"
dependencies = [
    "pydicom>=2.4.0",
    "SimpleITK>=2.3.0",
    "nibabel>=5.1.0",
    "opencv-python>=4.8.0",
    "scikit-image>=0.21.0",
    "dicom2nifti>=2.4.10",
    "pynetdicom>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "plotly>=5.17.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "openai>=2.24.0",
    "dotenv>=0.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.11.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "marimo>=0.20.2",
]
